@@ -52,7 +52,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -85,7 +84,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
                 zipOut.closeArchiveEntry();
             }
 
-            final HashMap<String, String> expectedContent = new HashMap<>();
+            final Map<String, String> expectedContent = new HashMap<>();
             expectedContent.put(null, "File1\nFile1\n");
 
             final List<Map<String, String>> expectedBoundaries = new ArrayList<>();
@@ -95,7 +94,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
 
             doTest(file,
                     1,
-                    new HashSet<>(Arrays.asList("revt.bgz", "revt.meta.bgz", "revt.mf.dat")),
+                    Set.of("revt.bgz", "revt.meta.bgz", "revt.mf.dat"),
                     expectedContent,
                     expectedBoundaries,
                     Instant.now(),
@@ -116,7 +115,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
                 zipOut.closeArchiveEntry();
             }
 
-            final HashMap<String, String> expectedContent = new HashMap<>();
+            final Map<String, String> expectedContent = new HashMap<>();
             expectedContent.put(null, "File1\nFile1\nFile1\nFile1\nFile1\nFile1\n");
 
             final List<Map<String, String>> expectedBoundaries = new ArrayList<>();
@@ -126,12 +125,12 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
 
             doTest(file,
                     3,
-                    new HashSet<>(Arrays.asList(
+                    Set.of(
                             "revt.bgz",
                             "revt.bdy.dat",
                             "revt.meta.bgz",
                             "revt.meta.bdy.dat",
-                            "revt.mf.dat")),
+                            "revt.mf.dat"),
                     expectedContent,
                     expectedBoundaries,
                     Instant.now(),
@@ -158,7 +157,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
                 zipOut.closeArchiveEntry();
             }
 
-            final HashMap<String, String> expectedContent = new HashMap<>();
+            final Map<String, String> expectedContent = new HashMap<>();
             expectedContent.put(null, "File1\nFile1\n");
             expectedContent.put(StreamTypeNames.CONTEXT, "Context1\nContext1\n");
             expectedContent.put(StreamTypeNames.META, "Meta11:1\nMeta12:1\nStreamSize:12\n");
@@ -191,7 +190,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
 
             doTest(file,
                     1,
-                    new HashSet<>(Arrays.asList("revt.bgz", "revt.ctx.bgz", "revt.meta.bgz", "revt.mf.dat")),
+                    Set.of("revt.bgz", "revt.ctx.bgz", "revt.meta.bgz", "revt.mf.dat"),
                     expectedContent,
                     expectedBoundaries,
                     receivedTime,
@@ -228,7 +227,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
                 zipOut.closeArchiveEntry();
             }
 
-            final HashMap<String, String> expectedContent = new HashMap<>();
+            final Map<String, String> expectedContent = new HashMap<>();
             expectedContent.put(null, "File1\nFile1\nFile2\nFile2\n");
             expectedContent.put(StreamTypeNames.CONTEXT, "Context1\nContext1\nContext2\nContext2\n");
             expectedContent.put(StreamTypeNames.META, "Meta1a\nMeta1b\nStreamSize:12\nMeta2a\nMeta2b\nStreamSize:12\n");
@@ -281,8 +280,13 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
 
             doTest(file,
                     1,
-                    new HashSet<>(Arrays.asList("revt.bgz", "revt.bdy.dat", "revt.ctx.bgz",
-                            "revt.ctx.bdy.dat", "revt.meta.bgz", "revt.meta.bdy.dat", "revt.mf.dat")),
+                    Set.of("revt.bgz",
+                            "revt.bdy.dat",
+                            "revt.ctx.bgz",
+                            "revt.ctx.bdy.dat",
+                            "revt.meta.bgz",
+                            "revt.meta.bdy.dat",
+                            "revt.mf.dat"),
                     expectedContent,
                     expectedBoundaries,
                     receivedTime,
@@ -306,7 +310,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
                 zipOut.closeArchiveEntry();
             }
 
-            final HashMap<String, String> expectedContent = new HashMap<>();
+            final Map<String, String> expectedContent = new HashMap<>();
             expectedContent.put(null, "File1\nFile1\nFile2\nFile2\n");
             final List<Map<String, String>> expectedBoundaries = new ArrayList<>();
             expectedBoundaries.add(Collections.singletonMap(null, "File1\nFile1\n"));
@@ -314,12 +318,12 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
 
             doTest(file,
                     1,
-                    new HashSet<>(Arrays.asList(
+                    Set.of(
                             "revt.bgz",
                             "revt.bdy.dat",
                             "revt.meta.bgz",
                             "revt.meta.bdy.dat",
-                            "revt.mf.dat")),
+                            "revt.mf.dat"),
                     expectedContent,
                     expectedBoundaries,
                     Instant.now(),
@@ -332,7 +336,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
     private void doTest(final Path file,
                         final int processCount,
                         final Set<String> expectedFiles,
-                        final HashMap<String, String> expectedContent,
+                        final Map<String, String> expectedContent,
                         final List<Map<String, String>> expectedBoundaries,
                         final Instant receivedTime,
                         final UniqueId receiptId) throws IOException {
@@ -367,7 +371,7 @@ class TestFileSystemZipProcessor extends AbstractCoreIntegrationTest {
         final List<Path> files = fileFinder
                 .findAllStreamFile(streamTargetStreamHandler.getStreamSet().iterator().next());
 
-        final HashSet<String> foundFiles = new HashSet<>();
+        final Set<String> foundFiles = new HashSet<>();
 
         for (final Path rfile : files) {
             if (Files.isRegularFile(rfile)) {
